--- a/teste/home.html
+++ b/teste/home.html
@@ -42,5 +42,11 @@
                 </nav>
             </div>
         </main>
+
+        <footer class="rodape">
+            <div class="container3">
+                <h4>Apoiadores:</h4>
+            </div>
+        </footer>
     </body>
 </html>
