Criando a versão mobile

--- a/teste/home.html
+++ b/teste/home.html
@@ -28,18 +28,21 @@
             
             <div class="container2">
                 <h2 class="tipo-usuario-aluno">Tipo de Usuario:</h2>
-                <nav class="menu-usuario">
+                
+                <ul class="lista-usuario">
+                    <nav class="menu-usuario">
 
-                    <div class="caixa-aluno">
-                        <h3 class="titulo-aluno">Aluno</h3>
-                        <a class="link-usuario" href="#"><img src="aluno.png"></a>
-                    </div>
+                        <div class="caixa-aluno">
+                            <h3 class="titulo-aluno">Aluno</h3>
+                            <a class="link-usuario" href="#"><img src="aluno.png"></a>
+                        </div>
 
-                    <div class="caixa-professor">
-                        <h3 class="titulo-professor">Professor</h3>
-                        <a class="link-usuario" href="#"><img src="aluno.png"></a>
-                    </div>
-                </nav>
+                        <div class="caixa-professor">
+                            <h3 class="titulo-professor">Professor</h3>
+                            <a class="link-usuario" href="#"><img src="aluno.png"></a>
+                        </div>
+                    </nav>
+                </ul>
             </div>
         </main>
 
